--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -108,6 +108,14 @@ body {
 	transform: translateY(-50%);
 }
 
+#about {
+	position: absolute;
+	bottom: 0;
+	left: 0.25em;
+	text-transform: uppercase;
+	font-weight: bold;
+}
+
 #player {
 	position: absolute;
 	top: -9999px;
